--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,15 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
+
+@import './base/common';
+@import './base/container';
+
+@import './utils/variables';
+@import './utils/visually-hidden';
+
+@import './components/btn';
+
+@import './layout/header';
+
+
