add hero layout

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,1 +1,22 @@
 
+<section class="hero-section">
+    <div class="container hero-container">
+        <div class="hero-wrapper">
+            <p class="subtitle">MODERN INTERIOR</p>
+            <h1 class="hero-title">Create Your Interior Design.</h1>
+            <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation.</p>
+            <a class="btn" href="">CONTACT</a>
+        
+        </div>
+        
+        <div class="image-wrapper">
+        
+            <img class="hero-image" src="./images/hero-image.jpg" alt="room-design">
+        </div>
+    </div>
+   
+
+</section>
+
