--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,10 @@
 
-<section class="hero-section">
+<section class="section hero-section">
     <div class="container hero-container">
         <div class="hero-wrapper">
             <p class="subtitle">MODERN INTERIOR</p>
             <h1 class="hero-title">Create Your Interior Design.</h1>
-            <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            <p class="section-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                 veniam, quis nostrud exercitation.</p>
             <a class="btn" href="">CONTACT</a>
@@ -16,6 +16,9 @@
             <img class="hero-image" src="./images/hero-image.jpg" alt="room-design">
         </div>
     </div>
+
+    <span class="hero-icon" ></span>
+   
    
 
 </section>
