--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -30,7 +30,10 @@ img {
 }
 
 .section {
-    padding-top: 60px;
+    width: 1905px;
+    margin-left: auto;
+    margin-right: auto;
+    
     padding-bottom: 60px;
 
 }
