--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -1,7 +1,9 @@
 .btn {
-    
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     min-width: 142px;
-    height: 78px;
+    height: 42px;
     padding-left: 28px;
     padding-right: 28px;
 
