--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,8 +1,8 @@
 .header-container {
     display: flex;
     align-items: center;
-    margin-top: 34px;
-    margin-bottom: 94px;
+    padding-top: 34px;
+    padding-bottom: 94px;
 }
 
 .nav-menu {
@@ -31,15 +31,24 @@
 
 
 .header-btn {
-    display: block;
+    
     min-width: 97px;
     height: 32px;
     padding: 5px 19px;
 
+    font-family: inherit;
     font-weight: 600;
     font-size: 16px;
     line-height: 1.38;
+    text-align: center;
      
     color: #FFFFFF;
     background-color: var(--secondary-accent-color);
+
+    border-radius: 20px 0px;
+    border: none;
+    
+    
+   
+    
 }
