--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,9 @@
 @import './utils/visually-hidden';
 
 @import './components/btn';
+@import './components/subtitle';
+@import './components/section-text';
+    
 
 @import './layout/header';
 @import "./layout/hero"
