add section services

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,1 +1,33 @@
-<p></p>
+<section class="section what-we-do-section">
+    <div class="container">
+        <div>
+            <img src="./images/about-us-image.jpg" alt="design anteroom">
+        </div>
+
+        <div>
+            <p>ABOUT US</p>
+            <h2>Interioris The Will of An Epoch Mextreo</h2>
+            <p>There are many variations of passages of Lorem Ipsum available,
+            but the majority have suffered alteration in some form injected
+            humour, or randomised words which don't look even slightly
+            believable.If you are going to use a passage of Lorem Ipsum,
+            sure there isn't anything embarrassing hidden the middleof text.
+            All the Lorem Ipsum generators on the Internettend to repeat
+            predefined chunks as necessary,making this the first true
+            generator on the Internet.</p>
+            <a class="btn" href="">LEARN MORE</a>
+        </div>
+
+        <div>
+            <img src="./images/20years.png" alt="20 years of sucсess">
+            <h2>Years Of Successful Working The Market</h2>
+            <a href="" class="btn">READ MORE</a>
+
+        </div>
+
+        <div>
+            <img src="./images/about-us-wall.jpg" alt="shelves on the wall">
+        </div>
+
+    </div>
+</section>
