--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -17,9 +17,7 @@
         </div>
     </div>
 
-    <span class="hero-icon" ></span>
-   
-   
-
+    <span class="section-icon--left" ></span>
+      
 </section>
 
