--- a/src/partials/services.html
+++ b/src/partials/services.html
@@ -1,18 +1,25 @@
 <section class="section services-section">
     <div class="container">
-        <p class="subtitle services-subtitle">WHAT WE DO</p>
-        <h2 class="title">Our Service</h2>
+        <div class="services-title-wrapper">
+            <div class="services-subtitle-wrapper">
+                <p class="subtitle services-subtitle">WHAT WE DO</p>
+                <h2 class="title">Our Service</h2>
 
-        <button class="services-btn" >
-            <svg class="services-btn__icon" >
-                <use href="./images/icon/icons.svg#arrow-left"></use>
-            </svg>
-        </button>
-        <button class="services-btn" >
-            <svg class="services-btn__icon" >
-                <use ></use>
-            </svg>
-        </button>
+            </div>
+                        
+            <button class="gallery-btn">
+                <svg class="gallery-btn__icon">
+                    <use href="./images/icon/icons.svg#arrow-left"></use>
+                </svg>
+            </button>
+            <button class="gallery-btn gallery-btn--end">
+                <svg class="gallery-btn__icon">
+                    <use href="./images/icon/icons.svg#arrow-right"></use>
+                </svg>
+            </button>
+
+        </div>
+        
         
         <div class="services-wrapper">
             <div class="services-list">
