--- a/src/sass/layout/_services.scss
+++ b/src/sass/layout/_services.scss
@@ -4,6 +4,13 @@
     padding-bottom: 204px;
 }
 
+.services-title-wrapper {
+    display: flex;
+    align-items: end;
+    
+    
+}
+
 .services-subtitle {
     line-height: 1.4;
     letter-spacing: -0.01em;
@@ -71,25 +78,4 @@
     
 }
 
-.services-btn {
-    border: none;
-    border-radius: 50%;
-    margin-right: 18px;
-    margin-bottom: 51px;
-    padding: 0;
-    
-    width: 30px;
-    height: 29px;
-
-    line-height: 0;
-    background-color: transparent;
-    box-shadow: -1px 3px 10px rgba(0, 0, 0, 0.3);
-}
-
-.services-btn__icon {
-    width: 4px;
-    height: 8px;
-   
-    
-}
 
