--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import './components/section-text';
 @import './components/title';
 @import './components/section-icon';
+@import './components/gallery-btn';
     
 
 @import './layout/header';
