add about-us icon

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="section what-we-do-section">
+<section class="section about-us-section">
     <div class="container">
         <div>
             <img src="./images/about-us-image.jpg" alt="design anteroom">
@@ -30,4 +30,7 @@
         </div>
 
     </div>
+
+    <span class="about-us-section-icon--left section-icon--left"></span>
+    <span class="section-icon--right"></span>
 </section>
