--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,9 +11,9 @@
         
         </div>
         
-        <div class="image-wrapper">
+        <div class="hero-image-wrapper image-wrapper">
         
-            <img class="hero-image" src="./images/hero-image.jpg" alt="room-design">
+            <img class="image-radius" src="./images/hero-image.jpg" alt="room-design">
         </div>
     </div>
 
