--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -29,23 +29,9 @@
 
 }
 
-.image-wrapper {
-    position: relative;
+.hero-image-wrapper {
     width: 716px;
     height: 626px;
-   
-    border: 2px solid #B0855B;
-    box-sizing: border-box;
-    border-radius: 140px 0px;
-
 }
-
-.hero-image {
-    position: absolute;
-    right: 35px;
-    bottom: 33px;
-    border-radius: 140px 0px;
-}
-
 
 
