--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,10 +18,12 @@
 @import './components/title';
 @import './components/section-icon';
 @import './components/gallery-btn';
+@import './components/image-wrapper';
     
 
 @import './layout/header';
 @import './layout/hero';
 @import './layout/services';
+@import './layout/about-us';
 
 
