add html and styles to about-us

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 
-<section class="section hero-section">
-    <div class="container hero-container">
+<section class="section hero__section">
+    <div class="container hero__container">
         <div class="hero-wrapper">
             <p class="subtitle">MODERN INTERIOR</p>
             <h1 class="hero-title">Create Your Interior Design.</h1>
@@ -11,7 +11,7 @@
         
         </div>
         
-        <div class="hero-image-wrapper image-wrapper">
+        <div class="hero__image-wrapper image-wrapper">
         
             <img class="image-radius" src="./images/hero-image.jpg" alt="room-design">
         </div>
