--- a/src/partials/services.html
+++ b/src/partials/services.html
@@ -1,8 +1,8 @@
-<section class="section services-section">
+<section class="section services__section">
     <div class="container">
         <div class="services-title-wrapper">
             <div class="services-subtitle-wrapper">
-                <p class="subtitle services-subtitle">WHAT WE DO</p>
+                <p class="subtitle ">WHAT WE DO</p>
                 <h2 class="title">Our Service</h2>
 
             </div>
