--- a/src/sass/components/_subtitle.scss
+++ b/src/sass/components/_subtitle.scss
@@ -1,8 +1,8 @@
 .subtitle {
+    font-family: Poppins, sans-serif;
     margin-bottom: 12px;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 20px;
     line-height: 1.35;
-    
-    color: var(--primary-text-color);
+   
 }
