--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,36 +1,42 @@
-<section class="section about-us-section">
+<section class="section about-us__section">
     <div class="container">
-        <div>
-            <img src="./images/about-us-image.jpg" alt="design anteroom">
-        </div>
-
-        <div>
-            <p>ABOUT US</p>
-            <h2>Interioris The Will of An Epoch Mextreo</h2>
-            <p>There are many variations of passages of Lorem Ipsum available,
-            but the majority have suffered alteration in some form injected
-            humour, or randomised words which don't look even slightly
-            believable.If you are going to use a passage of Lorem Ipsum,
-            sure there isn't anything embarrassing hidden the middleof text.
-            All the Lorem Ipsum generators on the Internettend to repeat
-            predefined chunks as necessary,making this the first true
-            generator on the Internet.</p>
-            <a class="btn" href="">LEARN MORE</a>
-        </div>
-
-        <div>
-            <img src="./images/20years.png" alt="20 years of sucсess">
-            <h2>Years Of Successful Working The Market</h2>
-            <a href="" class="btn">READ MORE</a>
+        <div class="about-us-wrapper">
+            <div class="about-us__image-wrapper image-wrapper">
+                <img class="image-radius image-radius--right" src="./images/about-us-image.jpg" alt="design anteroom">
+            </div>
+            <div class="about-us-content">
+                <p class="subtitle">ABOUT US</p>
+                <h2 class="title">Interioris The Will of An Epoch Mextreo</h2>
+                <p class="section-text">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form injected
+                    humour, or randomised words which don't look even slightly
+                    believable.If you are going to use a passage of Lorem Ipsum,
+                    sure there isn't anything embarrassing hidden the middleof text.
+                    All the Lorem Ipsum generators on the Internettend to repeat
+                    predefined chunks as necessary,making this the first true
+                    generator on the Internet.</p>
+                <a class="btn" href="">LEARN MORE</a>
+            </div>
 
         </div>
+            
+        <div class="about-us-wrapper about-us-wrapper--bottom">
+            <div class="about-us-content">
+                <img src="./images/20years.png" alt="20 years of sucсess">
+                <h2 class="title title--top">Years Of Successful Working The Market</h2>
+                <a href="" class="btn">READ MORE</a>
+            
+            </div>
+            
+            <div class="image-wrapper about-us__image-wrapper">
+                <img class="image-radius" src="./images/about-us-wall.jpg" alt="shelves on the wall">
+            </div>
 
-        <div>
-            <img src="./images/about-us-wall.jpg" alt="shelves on the wall">
         </div>
+        
 
     </div>
 
-    <span class="about-us-section-icon--left section-icon--left"></span>
-    <span class="section-icon--right"></span>
+    <span class="about-us__section-icon--left section-icon--left"></span>
+    <span class="about-us__section-icon--right section-icon--right"></span>
 </section>
