--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,10 +1,10 @@
-.hero-section {
+.hero__section {
     
     padding-top: 32px;
     padding-bottom: 76px;
 }
 
-.hero-container {
+.hero__container {
     display: flex;
     align-items: center;
     
@@ -29,7 +29,7 @@
 
 }
 
-.hero-image-wrapper {
+.hero__image-wrapper {
     width: 716px;
     height: 626px;
 }
