--- a/src/sass/layout/_services.scss
+++ b/src/sass/layout/_services.scss
@@ -1,4 +1,4 @@
-.services-section {
+.services__section {
     
     padding-top: 50px;
     padding-bottom: 204px;
@@ -9,12 +9,6 @@
     align-items: end;
     
     
-}
-
-.services-subtitle {
-    line-height: 1.4;
-    letter-spacing: -0.01em;
-    margin-bottom: 0;
 }
 
 .services-wrapper {
