add testimonials html and styles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -26,5 +26,7 @@
 @import './layout/services';
 @import './layout/about-us';
 @import './layout/completed-work';
+@import './layout/testimonials';
+@import './layout/blog';
 
 
