--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -1,3 +1,30 @@
-<section>
-    <div class="container"></div>
+<section class="section blog__section">
+    <div class="container">
+        <p class="subtitle subtitle--center">LETEST NEWS</p>
+        <h2 class="title blog__title">From Our Blog</h2>
+        <ul class="blog-wrapper">
+            <li class="blog-list" >
+                <div class="image-wrapper blog__image-wrapper" >
+                    <img class="image-radius blog__image-radius" src="/images/commode.jpg" alt="picture of commode">
+                </div>
+                <p class="blog-list__title" >2020 Interior Design Trends</p>
+                <p class="blog-list__text" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                incididunt ut labore et dolore magna aliqua.</p>
+                <a href="" class="btn">CONTINUE READING....</a>
+
+            </li>
+            <li class="blog-list" >
+                <div class="image-wrapper blog__image-wrapper" >
+                    <img class="image-radius blog__image-radius" src="/images/living-room.jpg" alt="foto living room">
+                </div>
+                <p class="blog-list__title" >28 Notable Product at ARC Interior Design</p>
+                <p class="blog-list__text" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                incididunt ut labore et dolore magna aliqua.</p>
+                <a href="" class="btn">CONTINUE READING....</a>
+
+            </li>
+        </ul>
+    </div>
+    <span class="section-icon--left blog__section-icon--left"></span>
+
 </section>
