add btn to blog

--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -10,7 +10,7 @@
                 <p class="blog-list__title" >2020 Interior Design Trends</p>
                 <p class="blog-list__text" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 incididunt ut labore et dolore magna aliqua.</p>
-                <a href="" class="btn">CONTINUE READING....</a>
+                <a href="" class="btn blog__btn">CONTINUE READING....</a>
 
             </li>
             <li class="blog-list" >
@@ -20,7 +20,7 @@
                 <p class="blog-list__title" >28 Notable Product at ARC Interior Design</p>
                 <p class="blog-list__text" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 incididunt ut labore et dolore magna aliqua.</p>
-                <a href="" class="btn">CONTINUE READING....</a>
+                <a href="" class="btn blog__btn">CONTINUE READING....</a>
 
             </li>
         </ul>
