--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -3,14 +3,14 @@
     align-items: center;
     justify-content: center;
     min-width: 142px;
-    height: 42px;
+    min-height: 42px;
    
     border-radius: 20px 0px;
     border: none;
     
     font-family: inherit;
     font-size: 18px;
-    line-height: 4.33;
+    line-height: 1.56;
     text-align: center;
     
     color: var(--third-text-color);
