--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -18,7 +18,7 @@
 
         <div class="clients-wrapper" >
             <div class="clients" >
-                <img class="clients__image" src="./images/louis-saville.jpg" alt="foto clients louis saville">
+                <img class="clients__image" src="./images/louis_saville.jpg" alt="foto clients louis saville">
                 <div class="clients__description">
                     <p class="clients__title" >Louis Saville <span class="clients__title--font" >/CEO at Google inc</span></p>
                     <p class="clients__text" >Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -30,7 +30,7 @@
             </div>
 
             <div class="clients" >
-                <img class="clients__image" src="./images/rekha-varadwaz.jpg" alt="foto clients rekha varadwaz">
+                <img class="clients__image" src="./images/rekha_varadwaz.jpg" alt="foto clients rekha varadwaz">
                 <div class="clients__description">
                     <p class="clients__title" >Rekha Varadwaz <span class="clients__title--font">/Manager at Nike inc</span></p>
                     <p class="clients__text" >Lorem ipsum dolor sit amet, consectetur adipiscing
