--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,5 +28,6 @@
 @import './layout/completed-work';
 @import './layout/testimonials';
 @import './layout/blog';
+@import './layout/contact-form';
 
 
