--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -9,6 +9,7 @@
     border: none;
     
     font-family: inherit;
+    font-weight: 700;
     font-size: 18px;
     line-height: 1.56;
     text-align: center;
