--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="clients" >
-                <img class="clients__image" src="./images/rekha_varadwaz.jpg" alt="foto clients rekha varadwaz">
+                <img class="clients__image" src="./images/rekha-varadwaz.jpg" alt="foto clients rekha varadwaz">
                 <div class="clients__description">
                     <p class="clients__title" >Rekha Varadwaz <span class="clients__title--font">/Manager at Nike inc</span></p>
                     <p class="clients__text" >Lorem ipsum dolor sit amet, consectetur adipiscing
