--- a/src/partials/contact-form.html
+++ b/src/partials/contact-form.html
@@ -4,7 +4,7 @@
         <p class="contact-form__text">Find out early about all upcoming promotions and new product releases with
         our newsletter.</p>
         <form class="contact-form__wrapper" action="">
-            <input class="contact-form__input" type="email" name="email" placeholder="Enter your email address....." autofocus>
+            <input class="contact-form__input" type="email" name="email" placeholder="Enter your email address....." autofocus required>
             <button type="submit" class="btn contact-form__btn">SUBSCRIBE</button>
         </form>
     </div>
