--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -8,6 +8,71 @@
     display: flex;
 }
 
-.line {
-    border: 1px solid #C4C4C4;
+strong {
+    display: block;
 }
+
+.footer-logo {
+    width: 350px;
+    margin-right: 40px;
+    color: var(--primary-text-color);
+}
+
+.footer-logo__image {
+    margin-bottom: 15px;
+}
+
+.footer-list {
+    margin-right: 100px;
+}
+
+.footer-list--end {
+    margin-right: 0;
+}
+
+.footer__social-list {
+    margin-left: auto;
+}
+
+.social-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   
+}
+
+.social-list__item:not(:last-child) {
+    margin-right: 8px;
+}
+
+.social-list__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 38px;
+    height: 38px;
+    padding: 0;
+    margin: 0;
+    line-height: 0;
+
+    border-radius: 50%;
+    background-color: #D5D5D5;
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+    }
+
+}
+
+.social-list__icon {
+    fill: var(--third-text-color);
+}
+
+
+
+
+.footer-underline {
+    border-top: 1px solid #C4C4C4;;
+}
+
