--- a/src/sass/components/_gallery-btn.scss
+++ b/src/sass/components/_gallery-btn.scss
@@ -16,6 +16,7 @@
     background-color: transparent;
     box-shadow: -1px 3px 10px rgba(0, 0, 0, 0.3);
 
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -33,6 +34,8 @@
     width: 10px;
     height: 10px;
     stroke: var(--primary-text-color);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     .gallery-btn:hover &,
     .gallery-btn:focus & {
