--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -52,11 +52,12 @@ strong {
     width: 38px;
     height: 38px;
     padding: 0;
-    margin: 0;
     line-height: 0;
 
     border-radius: 50%;
     background-color: #D5D5D5;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -66,7 +67,9 @@ strong {
 }
 
 .social-list__icon {
+    
     fill: var(--third-text-color);
+    
 }
 
 
