--- a/src/sass/components/_gallery-btn.scss
+++ b/src/sass/components/_gallery-btn.scss
@@ -16,7 +16,9 @@
     background-color: transparent;
     box-shadow: -1px 3px 10px rgba(0, 0, 0, 0.3);
 
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -35,7 +37,7 @@
     height: 10px;
     stroke: var(--primary-text-color);
 
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     .gallery-btn:hover &,
     .gallery-btn:focus & {
