--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -57,7 +57,7 @@ strong {
     border-radius: 50%;
     background-color: #D5D5D5;
 
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
