--- a/src/sass/layout/_services.scss
+++ b/src/sass/layout/_services.scss
@@ -26,6 +26,8 @@
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.14);
     border-radius: 60px 0px;
 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     &:hover,
     &:focus {
         background-color: #CAA892;
