--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,23 +7,24 @@
         </a>
 
         <div class="footer-list-wrapper">
-            <strong>Quick Links</strong>
+
+            <strong class="footer-title">Quick Links</strong>
             
-            <ul class="footer-list" >
+            <ul class="footer-list">
                 <li>
-                    <a href="">About Our Company</a>
+                    <a class="footer-list__link" href="">About Our Company</a>
                 </li>
                 <li>
-                    <a href="">Services WE provide</a>
+                    <a class="footer-list__link" href="">Services WE provide</a>
                 </li>
                 <li>
-                    <a href="">Career & Opportunity</a>
+                    <a class="footer-list__link" href="">Career & Opportunity</a>
                 </li>
                 <li>
-                    <a href="">Privacy & policy</a>
+                    <a class="footer-list__link" href="">Privacy & policy</a>
                 </li>
                 <li>
-                    <a href="">Contact US</a>
+                    <a class="footer-list__link" href="">Contact US</a>
                 </li>
             </ul>
 
@@ -31,40 +32,41 @@
 
         
         <div class="footer-list-wrapper">
-            <strong>Company</strong>
+
+            <strong class="footer-title">Company</strong>
             
             <ul class="footer-list" >
                 <li>
-                    <a href="">About Company</a>
+                    <a class="footer-list__link" href="">About Company</a>
                 </li>
                 <li>
-                    <a href="">Our Testimonials</a>
+                    <a class="footer-list__link" href="">Our Testimonials</a>
                 </li>
                 <li>
-                    <a href="">Latest News</a>
+                    <a class="footer-list__link" href="">Latest News</a>
                 </li>
                 <li>
-                    <a href="">Our misson</a>
+                    <a class="footer-list__link" href="">Our misson</a>
                 </li>
                 <li>
-                    <a href="">Get a free Quot</a>
+                    <a class="footer-list__link" href="">Get a free Quot</a>
                 </li>
             </ul>
         </div>
         
         <div class="footer-list-wrapper">
-            <strong>Contact us</strong>
+            <strong class="footer-title" >Contact us</strong>
             
             <address>
                 <ul class="footer-list footer-list--end" >
                     <li>
-                        <a href="https://bit.ly/3LX9FTC">Sagrada Familia, Herba <br>Street Front USA</a>
+                        <a class="footer-list__link" href="https://bit.ly/3LX9FTC">Sagrada Familia, Herba <br>Street Front USA</a>
                     </li>
                     <li>
-                        <a href="mailto:brandoxide@gmail.com">brandoxide@gmail.com</a>
+                        <a class="footer-list__link" href="mailto:brandoxide@gmail.com">brandoxide@gmail.com</a>
                     </li>
                     <li>
-                        <a href="tel:+002568423591">002-568423591</a>
+                        <a class="footer-list__link" href="tel:+002568423591">002-568423591</a>
                     </li>
             
                 </ul>
@@ -74,7 +76,7 @@
         
 
         <div class="footer__social-list">
-            <strong>Follow Us</strong>
+            <strong class="footer-title" >Follow Us</strong>
             
             <ul class="social-list" >
                 <li class="social-list__item">
@@ -112,6 +114,6 @@
       
     </div>
    
-    <p class="footer-underline">Copyright @ 2020 Brandoxide.all right reserved.</p>
+    <p class="footer-underline">Copyright&#64;2020 Brandoxide.all right reserved.</p>
 
 </section>
