--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -30,6 +30,23 @@ strong {
     margin-right: 0;
 }
 
+.footer-title {
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.67;
+        
+    color: var(--secondary-text-color);
+}
+
+.footer-list__link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 2.78;
+       
+    color: var(--primary-text-color);
+}
+
 .footer__social-list {
     margin-left: auto;
 }
@@ -76,6 +93,9 @@ strong {
 
 
 .footer-underline {
-    border-top: 1px solid #C4C4C4;;
+    margin-top: 70px;
+    padding-top: 15px;
+    border-top: 1px solid #C4C4C4;
+    text-align: center;
 }
 
