--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <section class="section footer__section">
     <div class="container footer__container">
-        <a href="" class="logo footer-logo">
+        <a href="./index.html" class="logo footer-logo">
             <img class="footer-logo__image" src="./images/logo.png" alt="company logo">
             <p>But i must explain to you all this mistaken
             idea of dencouncing pleasure.</p>
@@ -18,10 +18,10 @@
                     <a class="footer-list__link" href="">Services WE provide</a>
                 </li>
                 <li>
-                    <a class="footer-list__link" href="">Career & Opportunity</a>
+                    <a class="footer-list__link" href="" target="_blank" rel="noreferrer noopener">Career & Opportunity</a>
                 </li>
                 <li>
-                    <a class="footer-list__link" href="">Privacy & policy</a>
+                    <a class="footer-list__link" href="" target="_blank" rel="noreferrer noopener">Privacy & policy</a>
                 </li>
                 <li>
                     <a class="footer-list__link" href="">Contact US</a>
@@ -57,10 +57,10 @@
         <div class="footer-list-wrapper">
             <strong class="footer-title" >Contact us</strong>
             
-            <address>
+            <address id="contact" >
                 <ul class="footer-list footer-list--end" >
                     <li>
-                        <a class="footer-list__link" href="https://bit.ly/3LX9FTC">Sagrada Familia, Herba <br>Street Front USA</a>
+                        <a class="footer-list__link" href="https://bit.ly/3LX9FTC" target="_blank" rel="noreferrer noopener">Sagrada Familia, Herba <br>Street Front USA</a>
                     </li>
                     <li>
                         <a class="footer-list__link" href="mailto:brandoxide@gmail.com">brandoxide@gmail.com</a>
@@ -80,28 +80,28 @@
             
             <ul class="social-list" >
                 <li class="social-list__item">
-                    <a class="social-list__btn" href="">
+                    <a class="social-list__btn" href="" target="_blank" rel="noreferrer noopener">
                         <svg class="social-list__icon" width="20" height="20">
                             <use href="/images/icon/icons.svg#facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__btn" href="">
+                    <a class="social-list__btn" href="" target="_blank" rel="noreferrer noopener">
                         <svg class="social-list__icon" width="20" height="20">
                             <use href="/images/icon/icons.svg#twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__btn" href="">
+                    <a class="social-list__btn" href="" target="_blank" rel="noreferrer noopener">
                         <svg class="social-list__icon" width="20" height="20">
                             <use href="/images/icon/icons.svg#instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__btn" href="">
+                    <a class="social-list__btn" href="" target="_blank" rel="noreferrer noopener">
                         <svg class="social-list__icon" width="20" height="20">
                             <use href="/images/icon/icons.svg#linkedin"></use>
                         </svg>
