--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,33 +1,33 @@
 <header class="container header-container">
 <a class="logo header-logo" href="">
-    <img src="./images/logo.png" alt="">
+    <img src="./images/logo.png" alt="./index.html">
 </a>
 
 <ul class="nav-menu">
     <li class="nav-menu__item">
-        <a class="nav-menu__link" href="">HOME</a>
+        <a class="nav-menu__link" href="#hero">HOME</a>
     </li>
     <li class="nav-menu__item">
-        <a class="nav-menu__link" href="">PROJECT</a>
+        <a class="nav-menu__link" href="#project">PROJECT</a>
     </li>
     <li class="nav-menu__item">
-        <a class="nav-menu__link" href="">SERVICES</a>
+        <a class="nav-menu__link" href="#services">SERVICES</a>
     </li>
     <li class="nav-menu__item">
-        <a class="nav-menu__link" href="">ABOUT</a>
+        <a class="nav-menu__link" href="#about">ABOUT</a>
     </li>
     <li class="nav-menu__item">
-        <a class="nav-menu__link" href="">BLOG</a>
+        <a class="nav-menu__link" href="#blog">BLOG</a>
     </li>
     <li class="nav-menu__item">
-        <a class="nav-menu__link" href="">SHOP</a>
+        <a class="nav-menu__link" href="#shop">SHOP</a>
     </li>
     <li class="nav-menu__item">
-        <a class="nav-menu__link" href="">CONTACT</a>
+        <a class="nav-menu__link" href="#contact">CONTACT</a>
     </li>
     
 </ul>
 
-<a class="header-btn" href="">Sign up</a>
+<a class="header-btn" href="" target="_blank" rel="noreferrer noopener">Sign up</a>
 
 </header>
