--- a/src/partials/services.html
+++ b/src/partials/services.html
@@ -3,7 +3,7 @@
         <div class="services-title-wrapper">
             <div class="services-subtitle-wrapper">
                 <p class="subtitle ">WHAT WE DO</p>
-                <h2 class="title">Our Service</h2>
+                <h2 id="services" class="title">Our Service</h2>
 
             </div>
                         
