--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -18,7 +18,15 @@
 
         <div class="clients-wrapper" >
             <div class="clients" >
-                <img class="clients__image" src="./images/louis_saville.jpg" alt="foto clients louis saville">
+                <picture>
+                    <source srcset="./images/louis_saville.webp 1x, ./images/louis_saville@2x.webp 2x" type="image/webp">
+                    
+                    <source srcset="./images/louis_saville.jpg 1x, ./images/louis_saville@2x.jpg 2x">
+
+                    <img class="clients__image" src="./images/louis_saville.jpg" alt="foto clients louis saville">
+
+                </picture>
+                
                 <div class="clients__description">
                     <p class="clients__title" >Louis Saville <span class="clients__title--font" >/CEO at Google inc</span></p>
                     <p class="clients__text" >Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -30,7 +38,15 @@
             </div>
 
             <div class="clients" >
-                <img class="clients__image" src="./images/rekha-varadwaz.jpg" alt="foto clients rekha varadwaz">
+                <picture>
+                    <source srcset="./images/rekha-varadwaz.webp 1x, ./images/rekha-varadwaz@2x.webp 2x" type="image/webp">
+                    
+                    <source srcset="./images/rekha-varadwaz.jpg 1x, ./images/rekha-varadwaz@2x.jpg 2x">
+
+                    <img class="clients__image" src="./images/rekha-varadwaz.jpg" alt="foto clients rekha varadwaz">
+
+                </picture>
+                
                 <div class="clients__description">
                     <p class="clients__title" >Rekha Varadwaz <span class="clients__title--font">/Manager at Nike inc</span></p>
                     <p class="clients__text" >Lorem ipsum dolor sit amet, consectetur adipiscing
