--- a/src/partials/completed-work.html
+++ b/src/partials/completed-work.html
@@ -1,6 +1,6 @@
 <section class="section completed-work__section">
     <div class="container">
-        <h2 class="title completed-work__title">3000+ Completed Work <br> Which WE have Successfully Done</h2>
+        <h2 id="project" class="title completed-work__title">3000+ Completed Work <br> Which WE have Successfully Done</h2>
         
         <ul class="completed-work">
             <li class="completed-work__item" >
