--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
     <div class="container hero__container">
         <div class="hero-wrapper">
             <p class="subtitle">MODERN INTERIOR</p>
-            <h1 class="hero-title">Create Your Interior Design.</h1>
+            <h1 id="hero" class="hero-title">Create Your Interior Design.</h1>
             <p class="section-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                 veniam, quis nostrud exercitation.</p>
@@ -12,8 +12,15 @@
         </div>
         
         <div class="hero__image-wrapper image-wrapper">
-        
-            <img class="image-radius" src="./images/hero-image.jpg" alt="room-design">
+            <picture>
+                <source srcset="./images/hero-image.webp 1x, ./images/hero-image@2x.webp 2x" 
+                type="image/webp">
+
+                <source srcset="./images/hero-image.jpg 1x, ./images/hero-image@2x.jpg 2x">
+
+                <img class="image-radius" src="./images/hero-image.jpg" alt="room-design">
+            </picture>
+                   
         </div>
     </div>
 
