add icons to testimonials

--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -29,6 +29,8 @@
                 
                 <div class="clients__description">
                     <p class="clients__title" >Louis Saville <span class="clients__title--font" >/CEO at Google inc</span></p>
+                    <span class="clients__title-icon"></span>
+                    
                     <p class="clients__text" >Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua.</p>
@@ -49,6 +51,7 @@
                 
                 <div class="clients__description">
                     <p class="clients__title" >Rekha Varadwaz <span class="clients__title--font">/Manager at Nike inc</span></p>
+                    <span class="clients__title-icon"></span>
                     <p class="clients__text" >Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua.</p>
