--- a/src/sass/layout/_testimonials.scss
+++ b/src/sass/layout/_testimonials.scss
@@ -54,12 +54,29 @@
     left: 0;
 }
 
+.clients__description {
+    position: relative;
+}
+
 .clients__title {
+   
     font-weight: 700;
     font-size: 24px;
     line-height: 1.38;
         
     color: var(--secondary-text-color);
+       
+}
+
+.clients__title-icon {
+    position: absolute;
+    display: block;
+    top: 0;
+    right: 0;
+    width: 41px;
+    height: 24px;
+    background-image: url(/images/icon/quotes.svg);
+
 }
 
 .clients__title--font {
